# aws-rust-sdk-repro-1

./: Cargo.toml  README.md
src/: main.rs
