[package]
name = "aws-rust-sdk-repro-1"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.17.0", features = ["rt-tokio"] }
sha2 = "0.10.8"
base64 = "0.22.0"
